# past-and-future

./: Cargo.toml  Dioxus.toml
assets/: main.css  main.css.br
docs/: index.html  main.css.br
docs/assets/dioxus/: past-and-future.js  past-and-future.js.br  past-and-future_bg.wasm  past-and-future_bg.wasm.br
docs/assets/dioxus/snippets/dioxus-interpreter-js-7e2aed97ebee2c55/: inline0.js  inline0.js.br
src/: main.rs
