[package]
name = "past-and-future"
version = "0.1.0"
authors = ["_5da <tomoyo.mgc@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"

dioxus = { version = "0.5", features = ["web"] }

# Debug
dioxus-logger = "0.5.1"
